--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 #root {
   margin: 0 auto;
+  background-color: #f6f7fb;
+  height: 100%;
 }
-
+html,
+body,
+#app,
+#app > div {
+  height: 100%;
+}
 .card {
   padding: 2em;
 }
@@ -11,4 +18,8 @@
 }
 .app {
   padding: 2rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
